Rename elements from 'board' to 'name saver' to better explain actual functionality

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <meta name="description" content="Checkers">
+  <meta name="description" content="Name Saver">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Checkers</title>
+    <title>Name Saver</title>
     <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
     <script type="text/javascript" src="scripts.js"></script>
     <link rel="stylesheet" type="text/css" href="styles.css">
@@ -12,7 +12,7 @@
   <body>
 
     <nav>
-      <strong>Checkers Game Demo:</strong> <a href="/checkers" target="" alt="home" title="home">checkers</a>
+      <strong>Name Saver Demo:</strong> <a href="/" target="" alt="home" title="home">home</a>
       <hr>
     </nav>
 
